// examples/grpc/proto/greeter.proto
syntax = "proto3";

package greeter;
option go_package = "github.com/HeZephyr/GoMicroKit/examples/grpc/proto";

// Greeter service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  
  // Sends multiple greetings as a server-side stream
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting
message HelloResponse {
  string message = 1;
}